--- a/PracownikBudowlany/index.html
+++ b/PracownikBudowlany/index.html
@@ -1,46 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Pracownik Budowlany</title>
-
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pracownik Budowlany</title>
 </head>
-<body>
-    <h1><p style="text-align: center;">Dorywcze prace budowlane i remontowe po godzinach solidnie i terminowo</h1> </p>
-  <p style="text-align: center;"><img src="pngtree-hardware-tool-transparent-background-free-png-image_12801133.png" width="500"> </p>
-  <hr> 
+<body style="font-family: Arial; text-align: center;">
 
-<h2>kontakt :</h2>
-<a href="https://www.facebook.com/profile.php?id=61575140642830"target="_blank">
-<button><p style="text-align: right;"><img src="kontakt2.png" width="200"> </p></button>
-</a>
+  <h1>Dorywcze prace budowlane i remontowe po godzinach solidnie i terminowo</h1>
+  
+  <img src="pngtree-hardware-tool-transparent-background-free-png-image_12801133.png" width="500" alt="narzędzia">
 
+  <hr>
 
- 
+  <h2>Kontakt:</h2>
+  <a href="https://www.facebook.com/profile.php?id=61575140642830" target="_blank">
+    <img src="kontakt2.png" width="200" alt="Facebook">
+  </a>
 
-  <section style="max-width: 600px; margin: 40px auto; font-family: Arial;">
-    <h1>Czym się zajmuję?</h1>
+  <section style="max-width: 600px; margin: 40px auto; text-align: left;">
+    <h2>Czym się zajmuję?</h2>
+    <ul>
+      <li>🔨 Drobne naprawy i prace budowlane</li>
+      <li>🧱 Montaż i demontaż</li>
+      <li>🎨 Malowanie, szpachlowanie</li>
+      <li>🪚 Prace wykończeniowe</li>
+      <li>🧰 Inne prace według potrzeb</li>
+    </ul>
 
-    <h2><ul style="list-style: none; padding-left: 0; line-height: 1.8;">
-        <li>🔨 <em>Drobne naprawy i prace budowlane</em></li>
-        <li>🧱 <em>Montaż i demontaż</em></li>
-        <li>🎨 <em>Malowanie, szpachlowanie</em></li>
-        <li>🪚 <em>Prace wykończeniowe</em></li>
-        <li>🧰 <em>Inne prace według potrzeb</em></li>
-        
-        <hr>
+    <h2>Dlaczego ja?</h2>
+    <ul>
+      <li>✔️ Doświadczenie w budowlance / remontach</li>
+      <li>✔️ Uczciwa wycena</li>
+      <li>✔️ Punktualność</li>
+      <li>✔️ Praca po godzinach – elastyczne terminy</li>
+      <li>✔️ Zlecenia od małych poprawek po większe prace</li>
+    </ul>
+  </section>
 
-        <h2> Dlaczego ja?</h2>
-    </ul> </h2>
-    <h1><ul style="list-style: none; padding-left: 0; line-height: 1.8;">
-    <li>✔️ Doświadczenie w budowlance / remontach</li>
-    <li>✔️ Uczciwa wycena</li>
-    <li>✔️ Punktualność</li>
-    <li>✔️ Praca po godzinach – elastyczne terminy</li>
-    <li>✔️ Zlecenia od małych poprawek po większe prace</li>
-</ul></h1>
-</section>
 </body>
 </html>
